--- a/scss/components/_team.scss
+++ b/scss/components/_team.scss
@@ -62,7 +62,8 @@
         list-style-type: none;
 
         @include mq (mobile) {
-            // width: 450px;
+            width: 450px;
+            
             margin-bottom: 30px;
             &:last-child {
                 margin-bottom: 0;
@@ -70,7 +71,8 @@
         }   
 
         @include mq (tablet) {
-            // width: 354px;
+            width: 354px;
+          
             margin-right: 30px;
             margin-bottom: 30px;
             &:nth-child(n + 3) {
@@ -82,7 +84,8 @@
         }
 
         @include mq (desktop) {
-            // width: 270px;
+            width: 270px;
+            
             margin-right: 30px;
             &:last-child {
                margin-right: 0;
