--- a/css/main.css
+++ b/css/main.css
@@ -368,56 +368,8 @@ img {
   color: var(--brend-color);
 }
 
-.menu-toggle {
-  width: 40px;
-  height: 40px;
-  background-color: #fff;
-  border: transparent;
-  cursor: pointer;
-}
-
-.menu-toggle:hover, .menu-toggle:focus {
-  fill: var(--brend-color);
-}
-
-.menu-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vw;
-  background-color: #fff;
-  z-index: 100;
-}
-
-.menu-container .menu-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vw;
-  background-color: #fff;
-  z-index: 100;
-}
-
-@media (min-widht: 768px) {
-  .menu-container .menu-toggle {
-    display: none;
-  }
-}
-
-@media (min-widht: 768px) {
-  .menu-toggle {
-    display: none;
-  }
-}
-
-.menu-toggle {
-  position: absolute;
-  top: 8px;
-  right: 8px;
-  width: 30px;
-  height: 30px;
+.mobile-menu-btn {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -427,16 +379,162 @@ img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  background: #FFFFFF;
-  border: transparent;
+  border: none;
+  background-color: transparent;
+  width: 40px;
+  height: 40px;
   padding: 0;
   cursor: pointer;
-  -webkit-transition: fill var(--slow-anim) var(--fost-anim);
-  transition: fill var(--slow-anim) var(--fost-anim);
+  z-index: 100;
 }
 
-.menu-toggle:hover, .menu-toggle:focus {
+@media screen and (min-width: 768px) {
+  .mobile-menu-btn {
+    display: none;
+  }
+}
+
+.mobile-menu-btn .icon-open {
+  opacity: 1;
+  -webkit-transition: fill var(--fost-anim);
+  transition: fill var(--fost-anim);
+}
+
+.mobile-menu-btn .icon-open:hover, .mobile-menu-btn .icon-open:focus {
   fill: var(--brend-color);
+}
+
+.mobile-menu-btn.is-open .icon-open {
+  opacity: 0;
+}
+
+.mobile-menu-btn .icon-close {
+  opacity: 0;
+}
+
+.mobile-menu-btn.is-open .icon-close {
+  opacity: 1;
+  -webkit-transition: fill var(--fost-anim);
+  transition: fill var(--fost-anim);
+}
+
+.mobile-menu-btn.is-open .icon-close:hover, .mobile-menu-btn.is-open .icon-close:focus {
+  fill: var(--brend-color);
+}
+
+.mobile-menu {
+  position: fixed;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  top: 0;
+  left: 0;
+  -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
+  background-color: #fff;
+  width: 100%;
+  height: 100%;
+  padding: 48px 40px;
+  -webkit-transition: -webkit-transform 400ms ease-in;
+  transition: -webkit-transform 400ms ease-in;
+  transition: transform 400ms ease-in;
+  transition: transform 400ms ease-in, -webkit-transform 400ms ease-in;
+  z-index: 90;
+}
+
+.mobile-menu.is-open {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+
+.mobile-menu-contacts {
+  margin-bottom: 64px;
+  list-style-type: none;
+}
+
+.mobile-menu-navigtion-item {
+  margin-bottom: 36px;
+  list-style-type: none;
+}
+
+.mobile-menu-navigtion-item:last-child {
+  margin-bottom: 0;
+}
+
+.mobile-menu-navigtion-link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: #212121;
+  position: relative;
+}
+
+.mobile-menu-navigtion-link.current::after {
+  position: absolute;
+  content: "";
+  color: var(--brend-color);
+}
+
+.mobile-menu-font {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: #757575;
+  text-decoration: none;
+}
+
+.mobile-menu-position:first-child .mobile-menu-font {
+  font-size: 24px;
+  color: var(--brend-color);
+}
+
+@media screen and (min-width: 480px) {
+  .mobile-menu-position:first-child .mobile-menu-font {
+    font-size: 34px;
+  }
+}
+
+.mobile-menu-position {
+  margin-top: 32px;
+}
+
+.mobile-menu-position:first-child {
+  margin-top: 0;
+}
+
+.mobile-menu-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 10px;
+  margin-top: 64px;
+  list-style-type: none;
+}
+
+.mobile-menu-link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: var(--brend-color);
+  text-decoration: none;
+}
+
+.mobile-menu-item:not(:last-child) .mobile-menu-link {
+  padding-right: 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
 }
 
 .hero {
