--- a/scss/components/_mobile-windows.scss
+++ b/scss/components/_mobile-windows.scss
@@ -1,71 +1,151 @@
-.menu-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vw;
-    background-color: #fff;
-    z-index: 100;
-    .menu-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vw;
-    background-color: #fff;
-    z-index: 100;
-    // transform: translateX(100%);
 
-//     @include mq(tablet-only) {
-//             display: none;
-//         }
-//     @include mq(not-desktop) {
-//       display: none;
-//   }
-}
-.menu-container.is-open {
-//    transform: translateX(1);
-}
-@media (min-widht: 768px) {
-    .menu-toggle {
+.mobile-menu-btn {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    background-color: transparent;
+
+    width: 40px;
+    height: 40px;
+    padding: 0;
+
+    cursor: pointer;
+    z-index: 100;
+    @include mq (tablet) {
         display: none;
     }
 }
 
-//     @include mq(tablet-only) {
-//             display: none;
-//         }
-//     @include mq(not-desktop) {
-//       display: none;
-//   }
-}
-.menu-container.is-open {
-//    transform: translateX(1);
-}
-@media (min-widht: 768px) {
-    .menu-toggle {
-        display: none;
+.mobile-menu-btn .icon-open {
+    opacity: 1;
+    transition: fill var(--fost-anim);
+
+    &:hover,
+    &:focus {
+        fill: var(--brend-color);
     }
 }
-.menu-toggle {
+
+.mobile-menu-btn.is-open .icon-open {
+    opacity: 0;
+}
+
+.mobile-menu-btn .icon-close {
+    opacity: 0;
+}
+
+.mobile-menu-btn.is-open .icon-close {
+    opacity: 1;
+    transition: fill var(--fost-anim);
+
+    &:hover,
+    &:focus {
+        fill: var(--brend-color);
+    }
+}
+
+
+.mobile-menu {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    top: 0;
+    left: 0;
+    transform: translateX(-100%);
+
+    background-color: #fff;
+
+    width: 100%;
+    height: 100%;
+    padding: 48px 40px;
+
+    transition: transform 400ms ease-in;
+    z-index: 90;
+}
+
+.mobile-menu.is-open {
+    transform: translateX(0);
+}
+
+.mobile-menu-contacts {
+    margin-bottom: 64px;
+    list-style-type: none;
+}
+
+.mobile-menu-navigtion-item {
+    margin-bottom: 36px;
+    list-style-type: none;
+
+
+    &:last-child {
+        margin-bottom: 0;
+    }
+}
+
+.mobile-menu-navigtion-link {
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 1.18;
+    letter-spacing: 0.02em;
+    text-decoration: none;
+    color: #212121;
+    position: relative;
+}
+.mobile-menu-navigtion-link.current::after {
     position: absolute;
-        top: 8px;
-        right: 8px;
-        width: 30px;
-        height: 30px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background: #FFFFFF;
-        border: transparent;
-        padding: 0;
-    
-        cursor: pointer;
-        transition: fill var(--slow-anim) var(--fost-anim);
-    
-        &:hover,
-        &:focus {
-            fill: var(--brend-color);
-        }
+    content: "";
+    color: var(--brend-color);
 
+}
+
+.mobile-menu-font {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 1.18;
+    letter-spacing: 0.02em;
+    color: #757575;
+    text-decoration: none;
+    
+
+    .mobile-menu-position:first-child & {
+        font-size: 24px;
+        color: var(--brend-color);
+
+        @include mq (mobile) {
+            font-size: 34px;
+        }
+    }
+}
+
+.mobile-menu-position {
+    margin-top: 32px;
+
+    &:first-child {
+        margin-top: 0;
+    }
+}
+
+.mobile-menu-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-top: 64px;
+    list-style-type: none;
+}
+
+.mobile-menu-link {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.22;
+    letter-spacing: 0.02em;
+    color: var(--brend-color);
+    text-decoration: none;
+
+    .mobile-menu-item:not(:last-child) & {
+        padding-right: 10px;
+        border-right: 1px solid rgba(33, 33, 33, 0.2);
+    }
 }
