--- a/scss/components/_clients.scss
+++ b/scss/components/_clients.scss
@@ -100,6 +100,7 @@
     justify-content: center;
     height: 92px;
     border: 1px solid #AFB1B8;
+    outline: transparent;
     border-radius: 4px;
     transition: color var(--slow-anim) var(--fost-anim),
         border-color var(--slow-anim) var(--fost-anim);
