--- a/css/main.css
+++ b/css/main.css
@@ -39,19 +39,19 @@ body {
   margin-right: auto;
 }
 
-@media screen and (mix-width: 480px) {
+@media screen and (min-width: 480px) {
   .contanier {
     width: 480px;
   }
 }
 
-@media screen and (min-widht: 768px) {
+@media screen and (min-width: 768px) {
   .contanier {
     width: 768px;
   }
 }
 
-@media screen and (min-widht: 1200px) {
+@media screen and (min-width: 1200px) {
   .contanier {
     width: 1200px;
   }
@@ -115,9 +115,14 @@ img {
   letter-spacing: 0.03em;
   color: var(--brend-color);
   text-decoration: none;
-  margin-right: 88px;
   padding-top: 26px;
   padding-bottom: 26px;
+}
+
+@media screen and (min-width: 768px) {
+  .logo-blue {
+    margin-right: 88px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -213,6 +218,10 @@ img {
   border-radius: 2px;
 }
 
+.navigtion-link.current {
+  color: var(--brend-color);
+}
+
 .header-gruop {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -230,6 +239,13 @@ img {
 @media screen and (min-width: 768px) {
   .group-1 {
     margin-right: 0;
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .group-1 {
+    margin-right: 30px;
   }
 }
 
@@ -302,7 +318,7 @@ img {
 @media screen and (min-width: 768px) {
   .group-mailto {
     padding: 0;
-    margin-bottom: 10px;
+    padding-top: 21px;
   }
 }
 
@@ -311,7 +327,6 @@ img {
     padding-top: 32px;
     padding-bottom: 32px;
     margin: 0;
-    margin-right: 30px;
   }
 }
 
@@ -340,6 +355,7 @@ img {
         -ms-flex-pack: start;
             justify-content: flex-start;
     padding: 0;
+    padding-bottom: 21px;
     margin: 0;
   }
 }
@@ -449,6 +465,12 @@ img {
   z-index: 90;
 }
 
+@media screen and (min-width: 768px) {
+  .mobile-menu {
+    display: none;
+  }
+}
+
 .mobile-menu.is-open {
   -webkit-transform: translateX(0);
           transform: translateX(0);
@@ -481,6 +503,10 @@ img {
 .mobile-menu-navigtion-link.current::after {
   position: absolute;
   content: "";
+  color: var(--brend-color);
+}
+
+.mobile-menu-navigtion-link.current {
   color: var(--brend-color);
 }
 
@@ -538,7 +564,6 @@ img {
 }
 
 .hero {
-  max-width: 480px;
   height: 400px;
   margin-right: auto;
   margin-left: auto;
@@ -566,8 +591,6 @@ img {
 
 @media screen and (min-width: 768px) {
   .hero {
-    max-width: 768px;
-    height: 400px;
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero/Header_md.jpg);
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/Header_md.jpg);
     background-image: -webkit-image-set(url(../images/hero/Header_dm.webp) 1x), -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4)));
@@ -615,7 +638,6 @@ img {
   color: var(--primary-white-color);
   margin-top: 0px;
   margin-bottom: 30px;
-  width: 360px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -680,7 +702,6 @@ img {
   left: 50%;
   -webkit-transform: translate(-50%, -50%) scale(0);
           transform: translate(-50%, -50%) scale(0);
-  min-width: 450px;
   padding-top: 40px;
   padding-bottom: 40px;
   padding-left: 40px;
@@ -692,6 +713,18 @@ img {
   transition: opacity 300ms ease-in-out 200ms, -webkit-transform 300ms ease-in-out 200ms;
   transition: transform 300ms ease-in-out 200ms, opacity 300ms ease-in-out 200ms;
   transition: transform 300ms ease-in-out 200ms, opacity 300ms ease-in-out 200ms, -webkit-transform 300ms ease-in-out 200ms;
+}
+
+@media screen and (max-width: 478px) {
+  .modal {
+    width: 96%;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+  .modal {
+    min-width: 450px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -752,6 +785,12 @@ img {
   color: #212121;
 }
 
+@media screen and (max-width: 478px) {
+  .modal-form {
+    width: 96%;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .modal-form {
     line-height: 1.15;
@@ -776,6 +815,7 @@ img {
           align-items: flex-start;
   position: relative;
   margin-bottom: 10px;
+  width: 100%;
 }
 
 .form-field-comment {
@@ -813,8 +853,8 @@ img {
 }
 
 .form-input {
-  width: 370px;
   height: 40px;
+  width: 100%;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding: 0;
@@ -827,12 +867,6 @@ img {
 
 .form-input:hover, .form-input:focus {
   border: 1px solid #2196F3;
-}
-
-@media screen and (min-width: 1200px) {
-  .form-input {
-    width: 448px;
-  }
 }
 
 .form-icon {
@@ -1006,7 +1040,6 @@ img {
 @media screen and (min-width: 480px) {
   .peculiarities__list-peculiarities {
     display: block;
-    width: 450px;
   }
 }
 
@@ -1020,7 +1053,6 @@ img {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    width: 738px;
   }
 }
 
@@ -1034,7 +1066,6 @@ img {
     -webkit-box-pack: start;
         -ms-flex-pack: start;
             justify-content: flex-start;
-    width: 1170px;
   }
 }
 
@@ -1140,6 +1171,7 @@ img {
   color: var(--title-text-color);
   margin-top: 0px;
   margin-bottom: 10px;
+  text-align: center;
 }
 
 .peculiarities__punctuality {
@@ -1150,6 +1182,7 @@ img {
   color: var(--title-text-color);
   margin-top: 0px;
   margin-bottom: 10px;
+  text-align: center;
 }
 
 .peculiarities__planning {
@@ -1160,6 +1193,7 @@ img {
   color: var(--title-text-color);
   margin-top: 0px;
   margin-bottom: 10px;
+  text-align: center;
 }
 
 .peculiarities__modern-technologies {
@@ -1170,6 +1204,7 @@ img {
   color: var(--title-text-color);
   margin-top: 0px;
   margin-bottom: 10px;
+  text-align: center;
 }
 
 .peculiarities__link-description {
@@ -1652,6 +1687,7 @@ img {
           justify-content: center;
   height: 92px;
   border: 1px solid #AFB1B8;
+  outline: transparent;
   border-radius: 4px;
   -webkit-transition: color var(--slow-anim) var(--fost-anim), border-color var(--slow-anim) var(--fost-anim);
   transition: color var(--slow-anim) var(--fost-anim), border-color var(--slow-anim) var(--fost-anim);
@@ -1745,6 +1781,12 @@ img {
 
 .logo-footer-group {
   text-align: center;
+}
+
+@media screen and (max-width: 478px) {
+  .logo-footer-group {
+    margin-bottom: 60px;
+  }
 }
 
 @media screen and (min-width: 480px) {
@@ -2001,9 +2043,13 @@ img {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     /* position: relative;     */
   }
 }
@@ -2044,9 +2090,17 @@ img {
   background-color: transparent;
 }
 
+@media screen and (max-width: 478px) {
+  .footer-input {
+    width: 98%;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .footer-input {
     width: 358px;
+    margin-right: 12px;
+    margin-bottom: 0;
   }
 }
 
@@ -2090,6 +2144,26 @@ img {
   .filter {
     padding-top: 94px;
     padding-bottom: 94px;
+  }
+}
+
+@media screen and (max-width: 478px) {
+  .filter-title {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    margin-top: 0;
+    margin-bottom: 40px;
+    padding: 0;
+    scroll-behavior: smooth;
   }
 }
 
@@ -2144,6 +2218,42 @@ img {
     margin-bottom: 50px;
     padding-left: 0;
     scroll-behavior: smooth;
+  }
+}
+
+@media screen and (max-width: 478px) {
+  .filter-item {
+    margin-top: 0;
+    margin-bottom: 10px;
+    margin-right: 8px;
+    -webkit-transition: -webkit-box-shadow var(--slow-anim);
+    transition: -webkit-box-shadow var(--slow-anim);
+    transition: box-shadow var(--slow-anim);
+    transition: box-shadow var(--slow-anim), -webkit-box-shadow var(--slow-anim);
+  }
+  .filter-item:last-child {
+    margin-right: 0;
+  }
+  .filter-item:nth-child(n + 4) {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .filter-item {
+    margin-top: 0;
+    margin-bottom: 10px;
+    margin-right: 8px;
+    -webkit-transition: -webkit-box-shadow var(--slow-anim);
+    transition: -webkit-box-shadow var(--slow-anim);
+    transition: box-shadow var(--slow-anim);
+    transition: box-shadow var(--slow-anim), -webkit-box-shadow var(--slow-anim);
+  }
+  .filter-item:last-child {
+    margin-right: 0;
+  }
+  .filter-item:nth-child(n + 4) {
+    margin-bottom: 0;
   }
 }
 
@@ -2251,6 +2361,26 @@ img {
           box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
+@media screen and (max-width: 478px) {
+  .portfolio {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+}
+
 @media screen and (min-width: 480px) {
   .portfolio {
     display: -webkit-box;
@@ -2304,6 +2434,22 @@ img {
             justify-content: center;
     padding: 0;
     margin-top: 0;
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (max-width: 478px) {
+  .portfolio-list {
+    display: block;
+    width: 98%;
+    margin-bottom: 30px;
+    position: relative;
+    -webkit-transition: -webkit-box-shadow var(--slow-anim) var(--fost-anim);
+    transition: -webkit-box-shadow var(--slow-anim) var(--fost-anim);
+    transition: box-shadow var(--slow-anim) var(--fost-anim);
+    transition: box-shadow var(--slow-anim) var(--fost-anim), -webkit-box-shadow var(--slow-anim) var(--fost-anim);
+  }
+  .portfolio-list:last-child {
     margin-bottom: 0;
   }
 }
@@ -2405,11 +2551,9 @@ img {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
-  letter-spacing: 0.06em;
   color: var(--title-text-color);
   margin-top: 0px;
   margin-bottom: 4px;
-  width: 322px;
 }
 
 .portfolio-position {
@@ -2436,6 +2580,7 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
+  overflow: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
