--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -1,5 +1,5 @@
 .hero {
-    max-width: 480px;
+    // max-width: 1200px;
     height: 400px;
     margin-right: auto;
     margin-left: auto;
@@ -27,8 +27,8 @@
         }
 
     @include mq (tablet) {
-        max-width: 768px;
-        height: 400px;
+        // max-width: 768px;
+        // height: 400px;
         background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4),
                     rgba(47, 48, 58, 0.4)),
                 url(../images/hero/Header_md.jpg);
@@ -75,9 +75,11 @@
             color: var(--primary-white-color);
             margin-top: 0px;
             margin-bottom: 30px;
-            width: 360px;
+            // width: 360px;
             margin-right: auto;
             margin-left: auto;
+            
+   
 
         @include mq (desktop) {
             font-size: 44px;
