--- a/scss/components/_portfolio.scss
+++ b/scss/components/_portfolio.scss
@@ -9,6 +9,17 @@
     
 
     &-title {
+    @media screen and (max-width:478px) {
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            justify-content: flex-start;
+            margin-top: 0;
+            margin-bottom: 40px;
+            padding: 0;
+            scroll-behavior: smooth;
+
+        }
     @include mq(mobile)    {
         display: flex;
         flex-wrap: wrap;
@@ -45,6 +56,33 @@
 
 
 .filter-item {
+    @media screen and (max-width:478px) {
+                margin-top: 0;
+                margin-bottom: 10px;
+                margin-right: 8px;
+                transition: box-shadow var(--slow-anim);
+        
+                &:last-child {
+                    margin-right: 0;
+                }
+        
+                &:nth-child(n + 4) {
+                    margin-bottom: 0;
+                }
+            }
+    @include mq(mobile) {
+    margin-top: 0;
+    margin-bottom: 10px;
+    margin-right: 8px;
+    transition: box-shadow var(--slow-anim);
+    &:last-child {
+        margin-right: 0;
+    }
+    &:nth-child(n + 4) {
+        margin-bottom: 0;
+    }
+
+    }
     @include mq(mobile) {
     margin-top: 0;
     margin-bottom: 10px;
@@ -145,6 +183,16 @@
 }
 
 .portfolio {
+    @media screen and (max-width:478px) {
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        align-items: center;
+        padding: 0;
+        margin-top: 0;
+        margin-bottom: 0;
+
+    }
     @include mq(mobile) {
         display: flex;
         flex-direction: column;
@@ -176,6 +224,19 @@
 
 
 .portfolio-list {
+    @media screen and (max-width:478px) {
+        display: block;
+        width: 98%;
+        margin-bottom: 30px;
+        position: relative;
+        transition: box-shadow var(--slow-anim) var(--fost-anim);
+        
+        &:last-child {
+                margin-bottom: 0;
+            }
+
+    }
+    
     @include mq(mobile) {
         display: block;
         width: 450px;
@@ -248,18 +309,20 @@
     padding-top: 20px;
     padding-bottom: 20px;
     border: 1px solid #EEEEEE;
-
+    
 }
 
 .portfolio-title {
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
-    letter-spacing: 0.06em;
+    // letter-spacing: 0.06em;
     color: var(--title-text-color);
     margin-top: 0px;
     margin-bottom: 4px;
-    width: 322px;
+    // width: 322px;
+    
+   
 }
 
 .portfolio-position {
@@ -286,6 +349,7 @@
     left: 0;
     width: 100%;
     height: 100%;
+    overflow: auto;
 
     display: flex;
     align-items: center;
