--- a/css/main.css
+++ b/css/main.css
@@ -246,6 +246,7 @@ img {
 @media screen and (min-width: 1200px) {
   .group-1 {
     margin-right: 30px;
+    margin-bottom: 0;
   }
 }
 
@@ -576,16 +577,16 @@ img {
   background-size: cover;
   background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero/Header_sm.jpg);
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/Header_sm.jpg);
-  background-image: -webkit-image-set(url(../images/hero/Header_sm.webp) 1x), -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4)));
-  background-image: -webkit-image-set(url(../images/hero/Header_sm.webp) 1x), linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), -webkit-image-set(url(../images/hero/Header_sm.webp) 1x);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), -webkit-image-set(url(../images/hero/Header_sm.webp) 1x);
 }
 
 @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .hero {
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero/Header_sm@2x.jpg);
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/Header_sm@2x.jpg);
-    background-image: -webkit-image-set(url(../images/hero/Header_sm@2x.webp) 2x), -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4)));
-    background-image: -webkit-image-set(url(../images/hero/Header_sm@2x.webp) 2x), linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), -webkit-image-set(url(../images/hero/Header_sm@2x.webp) 2x);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), -webkit-image-set(url(../images/hero/Header_sm@2x.webp) 2x);
   }
 }
 
@@ -593,10 +594,10 @@ img {
   .hero {
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero/Header_md.jpg);
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/Header_md.jpg);
-    background-image: -webkit-image-set(url(../images/hero/Header_dm.webp) 1x), -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4)));
-    background-image: -webkit-image-set(url(../images/hero/Header_dm.webp) 1x), linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
-    background-image: -webkit-image-set(url(../images/hero/Header_md@2x.webp) 2x), -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4)));
-    background-image: -webkit-image-set(url(../images/hero/Header_md@2x.webp) 2x), linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), -webkit-image-set(url(../images/hero/Header_dm.webp) 1x);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), -webkit-image-set(url(../images/hero/Header_dm.webp) 1x);
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), -webkit-image-set(url(../images/hero/Header_md@2x.webp) 2x);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), -webkit-image-set(url(../images/hero/Header_md@2x.webp) 2x);
   }
 }
 
@@ -615,10 +616,10 @@ img {
     padding-bottom: 200px;
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero/Header_lg.jpg);
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/Header_lg.jpg);
-    background-image: -webkit-image-set(url(../images/hero/Header_lg.webp) 1x), -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4)));
-    background-image: -webkit-image-set(url(../images/hero/Header_lg.webp) 1x), linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
-    background-image: -webkit-image-set(url(../images/hero/Header_lg@2x.webp) 2x), -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4)));
-    background-image: -webkit-image-set(url(../images/hero/Header_lg@2x.webp) 2x), linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), -webkit-image-set(url(../images/hero/Header_lg.webp) 1x);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), -webkit-image-set(url(../images/hero/Header_lg.webp) 1x);
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))) -webkit-image-set(url(../images/hero/Header_lg@2x.webp) 2x);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)) -webkit-image-set(url(../images/hero/Header_lg@2x.webp) 2x);
   }
 }
 
@@ -640,6 +641,12 @@ img {
   margin-bottom: 30px;
   margin-right: auto;
   margin-left: auto;
+}
+
+@media screen and (min-width: 768px) {
+  .hero-title {
+    width: 360px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -685,7 +692,7 @@ img {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.2);
-  z-index: 10;
+  z-index: 100;
   -webkit-transition: opacity 2050ms, visibility 2050ms var(--fost-anim);
   transition: opacity 2050ms, visibility 2050ms var(--fost-anim);
 }
@@ -1109,14 +1116,14 @@ img {
     width: 270px;
     margin-right: 30px;
   }
-  .peculiarities__item-peculiarities:last-child {
-    margin-right: 0;
-  }
   .peculiarities__item-peculiarities:nth-child(2n) {
     margin-right: 30px;
   }
   .peculiarities__item-peculiarities:nth-child(-n + 3) {
     margin-bottom: 0;
+  }
+  .peculiarities__item-peculiarities:last-child {
+    margin-right: 0;
   }
 }
 
@@ -1171,7 +1178,24 @@ img {
   color: var(--title-text-color);
   margin-top: 0px;
   margin-bottom: 10px;
-  text-align: center;
+}
+
+@media screen and (min-width: 480px) {
+  .peculiarities__attention-to-detail {
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .peculiarities__attention-to-detail {
+    text-align: left;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .peculiarities__attention-to-detail {
+    text-align: left;
+  }
 }
 
 .peculiarities__punctuality {
@@ -1182,7 +1206,24 @@ img {
   color: var(--title-text-color);
   margin-top: 0px;
   margin-bottom: 10px;
-  text-align: center;
+}
+
+@media screen and (min-width: 480px) {
+  .peculiarities__punctuality {
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .peculiarities__punctuality {
+    text-align: left;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .peculiarities__punctuality {
+    text-align: left;
+  }
 }
 
 .peculiarities__planning {
@@ -1193,7 +1234,24 @@ img {
   color: var(--title-text-color);
   margin-top: 0px;
   margin-bottom: 10px;
-  text-align: center;
+}
+
+@media screen and (min-width: 480px) {
+  .peculiarities__planning {
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .peculiarities__planning {
+    text-align: left;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .peculiarities__planning {
+    text-align: left;
+  }
 }
 
 .peculiarities__modern-technologies {
@@ -1204,7 +1262,24 @@ img {
   color: var(--title-text-color);
   margin-top: 0px;
   margin-bottom: 10px;
-  text-align: center;
+}
+
+@media screen and (min-width: 480px) {
+  .peculiarities__modern-technologies {
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .peculiarities__modern-technologies {
+    text-align: left;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .peculiarities__modern-technologies {
+    text-align: left;
+  }
 }
 
 .peculiarities__link-description {
@@ -1758,9 +1833,11 @@ img {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
   }
 }
 
@@ -1792,12 +1869,6 @@ img {
 @media screen and (min-width: 480px) {
   .logo-footer-group {
     margin-bottom: 60px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .logo-footer-group {
-    margin-right: 165px;
   }
 }
 
@@ -2013,6 +2084,9 @@ img {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
   }
 }
 
@@ -2429,9 +2503,6 @@ img {
             flex-direction: row;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
     padding: 0;
     margin-top: 0;
     margin-bottom: 0;
@@ -2440,7 +2511,6 @@ img {
 
 @media screen and (max-width: 478px) {
   .portfolio-list {
-    display: block;
     width: 98%;
     margin-bottom: 30px;
     position: relative;
@@ -2456,7 +2526,6 @@ img {
 
 @media screen and (min-width: 480px) {
   .portfolio-list {
-    display: block;
     width: 450px;
     margin-bottom: 30px;
     position: relative;
@@ -2491,7 +2560,7 @@ img {
 
 @media screen and (min-width: 1200px) {
   .portfolio-list {
-    display: block;
+    width: 370px;
     margin-bottom: 30px;
     margin-right: 30px;
     position: relative;
@@ -2551,6 +2620,7 @@ img {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
+  letter-spacing: 0.06em;
   color: var(--title-text-color);
   margin-top: 0px;
   margin-bottom: 4px;
@@ -2561,7 +2631,6 @@ img {
   line-height: 1.87;
   letter-spacing: 0.03em;
   color: var(--text-color);
-  width: 322px;
 }
 
 .portfolio-img {
@@ -2603,5 +2672,16 @@ img {
   transition: opacity 250ms var(--fost-anim), -webkit-transform 250ms var(--fost-anim);
   transition: transform 250ms var(--fost-anim), opacity 250ms var(--fost-anim);
   transition: transform 250ms var(--fost-anim), opacity 250ms var(--fost-anim), -webkit-transform 250ms var(--fost-anim);
+}
+
+@media screen and (max-width: 478px) {
+  .product-action {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
 }
 /*# sourceMappingURL=main.css.map */
