--- a/scss/components/_peculiarities.scss
+++ b/scss/components/_peculiarities.scss
@@ -68,14 +68,15 @@
         @include mq (desktop) {
             width: 270px;
             margin-right: 30px;
-            &:last-child {
-                    margin-right: 0;
-                } 
+            
             &:nth-child(2n) {
                     margin-right: 30px;
                 }
             &:nth-child(-n + 3) {
                     margin-bottom: 0;
+                }
+            &:last-child {
+                    margin-right: 0;
                 }
     }
     }
@@ -114,7 +115,18 @@
         color: var(--title-text-color);
         margin-top: 0px;
         margin-bottom: 10px;
-        text-align: center;
+    @include mq (mobile) {
+            text-align: center;
+        }
+    
+        @include mq(tablet) {
+            text-align: left;
+        }
+    
+        @include mq(desktop) {
+            text-align: left;
+        }
+        
 
     }
 
@@ -126,7 +138,17 @@
         color: var(--title-text-color);
         margin-top: 0px;
         margin-bottom: 10px;
-        text-align: center;
+        @include mq (mobile) {
+                text-align: center;
+            }
+        
+        @include mq(tablet) {
+                text-align: left;
+            }
+        
+        @include mq(desktop) {
+                text-align: left;
+            }
 
     }
 
@@ -138,19 +160,37 @@
         color: var(--title-text-color);
         margin-top: 0px;
         margin-bottom: 10px;
-        text-align: center;
+        @include mq (mobile) {
+            text-align: center;
+        }
+    
+        @include mq(tablet) {
+            text-align: left;
+        }
+    
+        @include mq(desktop) {
+            text-align: left;
+        }
 
     }
 
     &__modern-technologies {
         font-weight: 700;
-        line-height: 1.14;
-        letter-spacing: 0.03em;
-        text-transform: uppercase;
-        color: var(--title-text-color);
-        margin-top: 0px;
-        margin-bottom: 10px;
-        text-align: center;
+            line-height: 1.14;
+            letter-spacing: 0.03em;
+            text-transform: uppercase;
+            color: var(--title-text-color);
+            margin-top: 0px;
+            margin-bottom: 10px;
+        @include mq (mobile) {
+            text-align: center;
+            }
+        @include mq(tablet) {
+            text-align: left;
+        }   
+        @include mq(desktop) {
+                text-align: left;
+        }
     }
 
     &__link-description {
