--- a/scss/components/_portfolio.scss
+++ b/scss/components/_portfolio.scss
@@ -214,7 +214,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
+    // justify-content: center;
     padding: 0;
     margin-top: 0;
     margin-bottom: 0;
@@ -225,7 +225,7 @@
 
 .portfolio-list {
     @media screen and (max-width:478px) {
-        display: block;
+        
         width: 98%;
         margin-bottom: 30px;
         position: relative;
@@ -238,7 +238,7 @@
     }
     
     @include mq(mobile) {
-        display: block;
+        
         width: 450px;
         margin-bottom: 30px;
         position: relative;
@@ -263,7 +263,8 @@
 }
 
     @include mq(desktop) {
-    display: block;
+    // display: block;
+    width: 370px;
     margin-bottom: 30px;
     margin-right: 30px;
     position: relative;
@@ -304,6 +305,7 @@
 }
 
 .portfolio-group {
+    // flex-grow: 1;
     padding-left: 22px;
     padding-right: 22px;
     padding-top: 20px;
@@ -316,7 +318,7 @@
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
-    // letter-spacing: 0.06em;
+    letter-spacing: 0.06em;
     color: var(--title-text-color);
     margin-top: 0px;
     margin-bottom: 4px;
@@ -330,7 +332,7 @@
     line-height: 1.87;
     letter-spacing: 0.03em;
     color: var(--text-color);
-    width: 322px;
+    // width: 322px;
 }
 
 .portfolio-img {
@@ -368,5 +370,10 @@
     transform: translateY(100%);
     transition: transform 250ms var(--fost-anim),
         opacity 250ms var(--fost-anim);
+    @media screen and (max-width:478px) {
+        display: flex;
+        align-items: flex-start;
+    }
+    
 }
 
