--- a/css/main.css
+++ b/css/main.css
@@ -2599,6 +2599,13 @@ img {
 
 .sending {
   text-decoration: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .sending:hover .product-action,
@@ -2609,6 +2616,9 @@ img {
 }
 
 .portfolio-group {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   padding-left: 22px;
   padding-right: 22px;
   padding-top: 20px;
@@ -2640,6 +2650,7 @@ img {
 .blok-insert {
   position: relative;
   overflow: hidden;
+  height: 100%;
 }
 
 .product-action {
