--- a/css/main.css
+++ b/css/main.css
@@ -2598,7 +2598,6 @@ img {
 }
 
 .sending {
-  text-decoration: none;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2606,6 +2605,8 @@ img {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  height: 100%;
+  text-decoration: none;
 }
 
 .sending:hover .product-action,
@@ -2616,14 +2617,14 @@ img {
 }
 
 .portfolio-group {
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
   padding-left: 22px;
   padding-right: 22px;
   padding-top: 20px;
   padding-bottom: 20px;
   border: 1px solid #EEEEEE;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 .portfolio-title {
