--- a/css/main.css
+++ b/css/main.css
@@ -103,6 +103,9 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
   fill: currentColor;
 }
 
@@ -386,7 +389,7 @@ img {
 }
 
 .mobile-menu-btn {
-  position: relative;
+  position: fixed;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2616,15 +2619,32 @@ img {
           transform: translateY(0);
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+  .sending {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
 .portfolio-group {
-  padding-left: 22px;
-  padding-right: 22px;
+  padding-left: 24px;
+  padding-right: 24px;
   padding-top: 20px;
   padding-bottom: 20px;
   border: 1px solid #EEEEEE;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+  .portfolio-group {
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+  }
 }
 
 .portfolio-title {
