--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -5,6 +5,7 @@
     &-contanier {
             display: flex;
             align-items: center;
+            justify-content: flex-end;
             fill: currentColor;
             
         }
