--- a/css/main.css
+++ b/css/main.css
@@ -438,11 +438,13 @@ img {
   transition: fill var(--fost-anim);
 }
 
-.mobile-menu-btn.is-open:hover {
+.mobile-menu-btn.is-open:hover,
+.mobile-menu-btn.is-open:focus {
   fill: var(--brend-color);
 }
 
-.mobile-menu-btn:hover {
+.mobile-menu-btn:hover,
+.mobile-menu-btn:focus {
   fill: var(--brend-color);
 }
 
@@ -1087,6 +1089,15 @@ img {
   list-style-type: none;
 }
 
+@media screen and (max-width: 478px) {
+  .peculiarities__item-peculiarities {
+    margin-bottom: 30px;
+  }
+  .peculiarities__item-peculiarities:last-child {
+    margin-bottom: 0;
+  }
+}
+
 @media screen and (min-width: 480px) {
   .peculiarities__item-peculiarities {
     width: 450px;
@@ -1393,6 +1404,13 @@ img {
   background-color: #F5F4FA;
 }
 
+@media screen and (max-width: 478px) {
+  .team {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+
 @media screen and (min-width: 480px) {
   .team {
     padding-top: 60px;
@@ -1473,6 +1491,15 @@ img {
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   list-style-type: none;
+}
+
+@media screen and (max-width: 478px) {
+  .card__member-item {
+    margin-bottom: 30px;
+  }
+  .card__member-item:last-child {
+    margin-bottom: 0;
+  }
 }
 
 @media screen and (min-width: 480px) {
@@ -1679,6 +1706,18 @@ img {
   padding: 0;
 }
 
+@media screen and (max-width: 478px) {
+  .scroll {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
 @media screen and (min-width: 480px) {
   .scroll {
     display: -webkit-box;
@@ -1719,6 +1758,15 @@ img {
   list-style-type: none;
   margin-bottom: 30px;
   margin-right: 30px;
+}
+
+@media screen and (max-width: 478px) {
+  .scroll__going-permanent-clients {
+    margin-right: 0;
+  }
+  .scroll__going-permanent-clients:last-child {
+    margin-bottom: 0;
+  }
 }
 
 @media screen and (min-width: 480px) {
@@ -2623,18 +2671,6 @@ img {
           transform: translateY(0);
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199.98px) {
-  .sending {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-}
-
 .portfolio-group {
   height: 100%;
   padding-left: 24px;
@@ -2642,14 +2678,9 @@ img {
   padding-top: 20px;
   padding-bottom: 20px;
   border: 1px solid #EEEEEE;
-}
-
-@media screen and (min-width: 768px) and (max-width: 1199.98px) {
-  .portfolio-group {
-    -webkit-box-flex: 1;
-        -ms-flex-positive: 1;
-            flex-grow: 1;
-  }
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 .portfolio-title {
