--- a/scss/components/_clients.scss
+++ b/scss/components/_clients.scss
@@ -34,6 +34,10 @@
 .scroll {
     margin: 0;
     padding: 0; 
+    @media screen and (max-width:478px) {
+        display: flex;
+        flex-direction: column;
+    }
 
     @include mq (mobile) {
     display: flex;
@@ -56,6 +60,12 @@
     list-style-type: none;
     margin-bottom: 30px;
     margin-right: 30px;
+    @media screen and (max-width:478px) {
+        margin-right: 0;
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
 
     @include mq (mobile) {
         &:nth-child(2n) {
