--- a/scss/components/_peculiarities.scss
+++ b/scss/components/_peculiarities.scss
@@ -44,6 +44,12 @@
 
     &__item-peculiarities {
         list-style-type: none;
+        @media screen and (max-width:478px) {
+            margin-bottom: 30px;
+            &:last-child {
+                margin-bottom: 0;
+            }
+        }
 
         @include mq(mobile) {
             width: 450px;
