--- a/scss/components/_team.scss
+++ b/scss/components/_team.scss
@@ -1,6 +1,10 @@
 
 .team {
     background-color: #F5F4FA;
+    @media screen and (max-width:478px) {
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
 
     @include mq (mobile) {
         padding-top: 60px;
@@ -60,6 +64,13 @@
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
         border-radius: 0px 0px 4px 4px;
         list-style-type: none;
+        @media screen and (max-width:478px) {
+            margin-bottom: 30px;
+            
+                &:last-child {
+                    margin-bottom: 0;
+                }
+        }
 
         @include mq (mobile) {
             width: 450px;
