--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -240,7 +240,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+    @media screen and (max-width:478px) {
+            width: 100%;
+        }
 
     @include mq (desktop) {
     display: flex;
@@ -260,6 +262,7 @@
     letter-spacing: 0.03em;
 
     color: rgba(255, 255, 255, 0.6);
+    
 }
 
 .footer-input {
