--- a/scss/components/_portfolio.scss
+++ b/scss/components/_portfolio.scss
@@ -194,17 +194,17 @@
 
     }
     @include mq(mobile) {
-        display: flex;
-        flex-direction: column;
-        align-content: center;
-        align-items: center;
+        // display: flex;
+        // flex-direction: column;
+        // align-content: center;
+        // align-items: center;
         padding: 0;
         margin-top: 0;
         margin-bottom: 0;
     }
     @include mq (tablet) {
         display: flex;
-        flex-direction: row;
+        // flex-direction: row;
         flex-wrap: wrap;
         padding: 0;
         margin-top: 0;
@@ -249,12 +249,13 @@
     }
     @include mq (tablet) {
         width: 354px;
+        // flex-basis: calc((100% - 30px) / 2);
         margin-bottom: 30px;
         margin-right: 30px;
         position: relative;
         transition: box-shadow var(--slow-anim) var(--fost-anim);
         &:nth-child(2n) {
-                margin-right: -30px;
+                margin-right: 0px;
             }
         &:last-child {
                 margin-bottom: 0;
@@ -298,6 +299,7 @@
     
     display: flex;
     flex-direction: column;
+    
     height: 100%;
     text-decoration: none;
 
@@ -310,13 +312,14 @@
 }
 
 .portfolio-group {
-    height: 100%;
+    // height: 100%;
     padding-left: 24px;
     padding-right: 24px;
     padding-top: 20px;
     padding-bottom: 20px;
     border: 1px solid #EEEEEE;
     flex-grow: 1;
+    
 
        
 }
@@ -350,7 +353,7 @@
 .blok-insert {
     position: relative;
     overflow: hidden;
-    height: 100%;
+    // height: 100%;
 }
 
 .product-action {
